--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -5,7 +5,7 @@
         "--init"
     ],
     "containerEnv": {
-        "NUV_BRANCH": "3.0.0-golang"
+        "NUV_BRANCH": "3.0.0-testing"
     },
     "postStartCommand": "sudo chown node:node /home/node/.bashrc ;  curl -L https://git.io/vQhTU  | sed 's/VERSION=\"1.20.6\"/VERSION=\"1.22.4\"/' | bash",
     "customizations": {
